# haduco

./: .copilot-instructions.md  .gitignore  .releaserc.json  .releaserc.preview.json  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  README_PIPELINE.md  SECURITY.md  SETUP_SUMMARY.md  pyproject.toml  requirements_test.txt
.github/: PULL_REQUEST_TEMPLATE.md  STYLE_GUIDE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.yml
.github/workflows/: codeql.yml  dependency-review.yml  pr-labeler.yml  preview-release.yml  release.yml  stale.yml  validate-pr-title.yml
custom_components/duco/: __init__.py  config_flow.py  const.py  manifest.json  strings.json
custom_components/duco_ventilation_sun_control/: __init__.py  boxes.py  calibration.py  comm_boards.py  common.py  config_flow.py  const.py  coordinator.py  ducobox_classes.py  manifest.json  network.py  nodes.py  select.py  sensor.py  strings.json
custom_components/duco_ventilation_sun_control/translations/: en.json
custom_components/ducobox-connectivity-board/: config_flow.py  sensor.py
docs/: COMMIT_GUIDE.md  DEVELOPMENT.md  RELEASE_PIPELINE.md  WORKFLOW_DIAGRAM.md
scripts/: update_version.py
tests/: __init__.py  conftest.py  test_init.py
