[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "duco_ventilation_sun_control"
version = "1.2.0"
description = "Home Assistant integration for DUCO Ventilation & Sun Control"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sikerdebaard", email = ""},
]
keywords = ["homeassistant", "duco", "ventilation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ducopy==18",
    "retrying==1.4.2",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = true
warn_incomplete_stub = false
warn_redundant_casts = false
warn_unused_configs = true
warn_return_any = false
warn_unreachable = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "homeassistant.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "custom_components.duco_ventilation_sun_control.sensor"
ignore_errors = true

[[tool.mypy.overrides]]
module = "custom_components.duco_ventilation_sun_control.select"
ignore_errors = true

[[tool.mypy.overrides]]
module = "custom_components.duco_ventilation_sun_control.config_flow"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
